report: add Hardware section

--- a/report/report.tex
+++ b/report/report.tex
@@ -217,6 +217,12 @@ This was done by using the \texttt{MPI.jl} \cite{JuliaMPI} package, which provid
 \label{code:adapt}\jlinputlisting[caption={adapt-step.jl}]{../adapt-step.jl}
 \jlinputlisting[caption={plot.jl}]{../plot.jl}
 \subsection{Hardware}
+For the single-threaded runs, the code was run on a laptop with an Intel Core i7-3520M CPU @ 3.60GHz and 6 GB of RAM.
+
+For the multithreaded runs, it was run on a desktop with an AMD FX-8350 CPU @ 4.00GHz with 4 cores and 8 threads, and 12 GB of RAM.
+
+For the parallel runs, it was run on a cluster with N nodes, each with X CPUs @ Y.ZGHz with M cores and P threads each, and Q GB of RAM.
+
 \section{Appendix B: Results}
 
 \subsection{Multithreading}\label{sec:mt}
